services/pihole/base/resources/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    name: pihole
  annotations:
    linkerd.io/inject: disabled
