services/pihole/base/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
        - 127.0.0.1
        - 8.8.8.8
      hostNetwork: false
      containers:
      - name: exporter
        image: ekofr/pihole-exporter
        imagePullPolicy: IfNotPresent
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources:
          limits:
            memory: 128Mi
        ports:
        - containerPort: 9617
          name: prometheus
          protocol: TCP
      - name: pihole
        image: pihole/pihole
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: false
        ports:
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        - name: dchp
          containerPort: 67
          protocol: UDP
        - name: web
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /admin.index.php
            port: web
          initialDelaySeconds: 60
          failureThreshold: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /admin.index.php
            port: web
          initialDelaySeconds: 60
          failureThreshold: 3
          timeoutSeconds: 5
        volumeMounts:
        - name: etc-pihole
          mountPath: /etc/pihole
        - name: etc-dnsmasq
          mountPath: /etc/dnsmasq.d
        - name: var-log
          mountPath: /var/log
        - name: var-log-lighttpd
          mountPath: /var/log/lighttpd
        resources:
          requests:
            cpu: "20m"
            memory: "512Mi"
          limits:
            cpu: "250m"
            memory: "896Mi"
      volumes:
      - name: etc-pihole
        emptyDir:
          medium: Memory
      - name: etc-dnsmasq
        emptyDir:
          medium: Memory
      - name: var-log
        emptyDir:
          medium: Memory
      - name: var-log-lighttpd
        emptyDir:
          medium: Memory
      - configMap:
          defaultMode: 420
          name: pihole-custom-dnsmasq
        name: custom-dnsmasq
