services/pihole/base/resources/services.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.203
  ports:
  - port: 53
    targetPort: dns
    protocol: TCP
    name: dns
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.203
  ports:
  - port: 53
    targetPort: dns-udp
    protocol: UDP
    name: dns-udp
  - port: 67
    targetPort: client-udp
    protocol: UDP
    name: client-udp
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  - port: 443
    targetPort: https
    protocol: TCP
    name: https
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-metrics
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 9617
    protocol: TCP
    name: metrics
